# curatomatic

./: .gitignore  README.md  pyproject.toml
curatomatic/: __main__.py
curatomatic/model/: gtdb_version.py  log.py  metadata.py  node_label.py  node_rd.py  rank.py  red.py  report.py  taxonomy.py  tree.py
curatomatic/util/: genome.py  log.py  taxon.py  tree.py
docs/: cases.ai  workflow.drawio
example/: gtdb_r226_ar53.decorated.dict  gtdb_r226_ar53.decorated.node_rd.tsv  gtdb_r226_ar53.decorated.scaled.red.tree  gtdb_r226_ar53.decorated.scaled.tree  meta.tsv
scripts/: annotate_red_values.py
